RESOLVED FIXED258813
Animation using padding-block doesn't override set padding style
https://bugs.webkit.org/show_bug.cgi?id=258813
Summary Animation using padding-block doesn't override set padding style
mattiasha
Reported 2023-07-03 09:54:19 PDT
Created attachment 466913 [details] Safari showing bug See codepen: https://codepen.io/emattias/pen/GRwEOwp In safari the one animating padding-block doesnt animate to 0 like it does in chrome and firefox. See attached video showing the bug in safari.
Attachments
Safari showing bug (963.04 KB, video/mp4)
2023-07-03 09:54 PDT, mattiasha
no flags
Same codepen in chrome (same in firefox) (836.23 KB, video/mp4)
2023-07-03 09:54 PDT, mattiasha
no flags
mattiasha
Comment 1 2023-07-03 09:54:58 PDT
Created attachment 466914 [details] Same codepen in chrome (same in firefox)
Radar WebKit Bug Importer
Comment 2 2023-07-10 09:55:17 PDT
Antoine Quint
Comment 3 2023-07-11 05:51:04 PDT
We simply don't support animating the padding-block property. In fact, looking over the code indicates we don't support animation of logical shorthand properties.
Antoine Quint
Comment 4 2023-07-11 06:42:32 PDT
Antoine Quint
Comment 5 2023-07-11 06:43:11 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/40966
EWS
Comment 6 2023-07-11 11:38:35 PDT
Committed 265956@main (f438e854500a): <https://commits.webkit.org/265956@main> Reviewed commits have been landed. Closing PR #15738 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.