Animation using padding-block doesnt override set padding style https://bugs.webkit.org/show_bug.cgi?id=258813 rdar://112023856

Reviewed by Tim Nguyen.

We did not support animating the padding-block shorthand. To do so we must do two things:

1. in CSSPropertyAnimation.cpp we must actually mark that shorthand as animatable.
2. in transitionMatchesProperty() we must support the possibility that a property
   is a shorthand for logical properties.

I suppose we could make transitionMatchesProperty() re-entrant in some way such that shorthands
of shorthands could also work, but this will do for now.

We also add animation support for padding-inline since it's a closely-related shorthand.

* LayoutTests/imported/w3c/web-platform-tests/css/css-logical/animations/padding-block-interpolation-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-logical/animations/padding-block-interpolation.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-logical/animations/padding-inline-interpolation-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-logical/animations/padding-inline-interpolation.html: Added.
* Source/WebCore/animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):
* Source/WebCore/style/Styleable.cpp:
(WebCore::transitionMatchesProperty):

Canonical link: https://commits.webkit.org/265956@main